--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ h4:not(:first-child) {
     margin-top: 32px;
 }
 
+
 h6 {
     margin: 24px 0 0;
     font-size: 14px;
@@ -113,13 +114,23 @@ strong {
     padding: 16px 0;
 }
 
+
 .link-doc {
     margin: 16px 0;
     padding: 16px;
 
-    border: 1px dashed hsl(308, 60%, 72%);;
     border-radius: 4px;
-    background-color: hsl(308, 60%, 98%);;
+    border: 1px dashed hsl(308, 60%, 72%);
+    background-color: hsl(308, 60%, 98%);
+}
+
+.link-advise {
+    padding: 24px;
+    margin: 32px 0;
+
+    border-radius: 4px;
+    border: 1px dashed hsl(54, 93%, 72%);
+    background-color: hsl(54, 93%, 94%);
 }
 
 .link-doc a {
